--- a/assets/scss/editor/_faq.scss
+++ b/assets/scss/editor/_faq.scss
@@ -66,7 +66,7 @@
 
     &__subtitle {
       max-width: 380px;
-      margin-top: 16px;
+      margin-top: 40px;
       font-family: "Inter Tight", sans-serif;
       font-size: 15px;
       font-weight: 400;
@@ -79,7 +79,7 @@
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 12px 16px;
-      margin-top: 40px;
+      margin-top: 60px;
     }
 
     &__column {
